--- a/react-mern-app/src/component/Post/Post.module.css
+++ b/react-mern-app/src/component/Post/Post.module.css
@@ -1,40 +1,36 @@
-.Post {
-    height: 150px;
+.mainContainer {
+    height: auto;
     width: auto;
     background-color: gray;
-    display: flex;
-    flex-direction: row;
     grid-column: 2/5;
-    grid-row: 2/3;
-
-
+    grid-row: 1/3;
     border-radius: 10px;
 }
 
-.Post div {
+.post {
     height: 50px;
     width: 100%;
-    grid-column: 2/5;
-    grid-row: 2/4;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid black;
-    
 }
 
-.Post input {
+.post input {
     height: 35px;
-    width: 95%;
+    width: 1000px;
     margin: 5px;
     border-radius: 10px;
-    
 }
-.Post img{
-    height: 50px;
-    width: 50px;
+
+.bodyContainer {
+    height: 100px;
+    background-color: white;
+    margin: 5px;
+    border: solid black;
+    border-radius: 10px;
+    text-align:justify;
+}
+p{
     margin-left: 5px;
-    display: flex;
-    border-radius: 50%;
 }
