--- a/react-mern-app/src/pages/AuthPage/AuthPage.module.css
+++ b/react-mern-app/src/pages/AuthPage/AuthPage.module.css
@@ -1,15 +1,13 @@
-.AuthPage {
-    height: 100%;
+.header {
+    margin-top: 50px;
+    margin-right: 225px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: var(--white);
-    border-radius: 2vmin;
-  }
-  
-  .AuthPage h3 {
-    margin-top: 4vmin;
-    text-align: center;
-    color: var(--text-light);
-    cursor: pointer;
-  }
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    
+}
+
+h1{
+    margin-right: 50px;
+}
