--- a/react-mern-app/src/component/Nav/Nav.module.css
+++ b/react-mern-app/src/component/Nav/Nav.module.css
@@ -1,14 +1,71 @@
-.Nav {
+.logoContainer{
+  height: 50px;
+  width:auto;
+  display: flex;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  border-bottom: 1px solid black;
+}
+.logoImage{
+  height: 45px;
+  width: 45px;
+  display: flex;
+  margin-left: 20px;
+  border-radius: 50%;
+}
+
+
+
+ .coverImage {
+  height: 200px;
+  margin-top: 75px;
+  display: flex;
+  flex-direction:row ;
+  grid-column: 2/5;
+  grid-row: 1/2;
+  border: 5px solid #FD9328;
+  border-radius: 10px;
+  background-image: url("https://cdn.shopify.com/s/files/1/0324/0004/8267/products/togepi20x10_grande.png?v=1627502646");
+}
+
+.profileImage{
+  margin: 5px;
+  border: 10px solid #E63610;
+  height: 170px;
+  width: 170px;
+  border-radius: 100px;
+  object-fit: cover;
+}
+
+
+input{
+  height: 30px;
+  margin: 10px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.nav {
     height: 50px;
+    width: auto;
     display: flex;
-    flex-direction:row ;
     grid-column: 2/5;
+    grid-row: 1/2;
     justify-content:space-evenly;
     align-items: center;
+    border-bottom: 1px solid black;
   }
   
-  .Nav a {
+   a {
     color:black;
     text-decoration: none;
   }
+
+  a:hover{
+    
+    background-color: grey;
+    border-bottom: 1px solid black;
+  }
+
+  
  
