--- a/react-mern-app/src/component/Post/Post.module.css
+++ b/react-mern-app/src/component/Post/Post.module.css
@@ -1,36 +1,38 @@
-.mainContainer {
+.mainContainer  {
     height: auto;
     width: auto;
-    background-color: gray;
+    display: flex;
+    margin-top: 100px;
+    grid-column: 2/5;
+    grid-row: 1/2;
+    border-radius: 10px;
+    border: solid black;
+}
+
+.creatPost{
+    width: 1100px;
+
+}
+
+.bodyContainer{
+    height: auto;
+    width: auto;
+    display: flex;
+    margin-top: 250px;
     grid-column: 2/5;
     grid-row: 1/3;
+    justify-content: center;
     border-radius: 10px;
-}
-
-.post {
-    height: 50px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-bottom: 1px solid black;
-}
-
-.post input {
-    height: 35px;
-    width: 1000px;
-    margin: 5px;
-    border-radius: 10px;
-}
-
-.bodyContainer {
-    height: 100px;
-    background-color: white;
-    margin: 5px;
     border: solid black;
-    border-radius: 10px;
-    text-align:justify;
 }
-p{
+
+.button {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.bodyText{
     margin-left: 5px;
+    border: solid black;
 }
