--- a/react-mern-app/src/component/SideBar/SideBar.module.css
+++ b/react-mern-app/src/component/SideBar/SideBar.module.css
@@ -1,13 +1,15 @@
 
 .SideBar {
-    margin: 20px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     grid-column: 1/2;
+    grid-row: 1/2;
   }
   
   .SideBar a {
-    margin: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
     display: flex;
     text-decoration: none;
     border-radius: 10px;
@@ -18,13 +20,10 @@
   }
 
   .SideBar img{
-    height: 50px;
-    width: 50px;
-    margin-left: 5px;
+    height: 45px;
+    width: 45px;
     display: flex;
     border-radius: 50%;
-   
-
   }
   
   .SideBar p {
