--- a/react-mern-app/src/pages/Profile/Profile.module.css
+++ b/react-mern-app/src/pages/Profile/Profile.module.css
@@ -1,32 +1,37 @@
-.Profile {
+.profile{
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-gap: 10px;
+    margin-top: 100px;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+  }
 
-    height: auto;
-    width: auto;
+  .intro {
+    grid-column: 2/3;
+    grid-row: 2/4;
     border: solid black;
-    display: flex;
-    flex-direction: column;
-    grid-column: 2/5;
-    grid-row: 2/5;
     border-radius: 10px;
-}
+  }
 
-.Profile div  {
-
-    height: 33%;
-    width: auto;
-    margin: 30px;
-    display: flex; 
-}
-
-.Profile input {
-    height: 100%;
-    width: 100%;
+  .photos {
+    grid-column: 2/3;
+    grid-row: 4/6;
+    border: solid black;
     border-radius: 10px;
-padding: 5px;
-}
+  }
 
-.Profile textarea {
-    height: 100%;
-    width: 100%;
+  .post {
+    grid-column: 3/5;
+    grid-row: 2/3;
+    border: solid black;
     border-radius: 10px;
-}
+  }
+
+  .posts {
+    grid-column: 3/5;
+    grid-row: 3/6;
+    border: solid black;
+    border-radius: 10px;
+  }
