--- a/react-mern-app/src/pages/Profile/Profile.module.css
+++ b/react-mern-app/src/pages/Profile/Profile.module.css
@@ -1,37 +1,64 @@
-.profile{
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    grid-gap: 10px;
-    margin-top: 100px;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-  }
+.profile {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-gap: 10px;
+  margin-top: 100px;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+}
 
-  .intro {
-    grid-column: 2/3;
-    grid-row: 2/4;
-    border: solid black;
-    border-radius: 10px;
-  }
+.coverImage {
+  height: 210px;
+  margin-top: 75px;
+  display: flex;
+  flex-direction: row;
+  grid-column: 2/5;
+  grid-row: 1/2;
+  border: 5px solid #FD9328;
+  border-radius: 10px;
+  background-image: url("https://cdn.shopify.com/s/files/1/0324/0004/8267/products/togepi20x10_grande.png?v=1627502646");
 
-  .photos {
-    grid-column: 2/3;
-    grid-row: 4/6;
-    border: solid black;
-    border-radius: 10px;
-  }
+}
 
-  .post {
-    grid-column: 3/5;
-    grid-row: 2/3;
-    border: solid black;
-    border-radius: 10px;
-  }
+.profileImage {
+  height: 200px;
+  width: 200px;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  background-image: url("https://i.kym-cdn.com/photos/images/original/001/890/895/225");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 200px;
+  border: solid black;
+}
 
-  .posts {
-    grid-column: 3/5;
-    grid-row: 3/6;
-    border: solid black;
-    border-radius: 10px;
-  }
+.intro {
+  grid-column: 2/3;
+  grid-row: 2/4;
+  border: solid black;
+  border-radius: 10px;
+}
+
+.photos {
+  grid-column: 2/3;
+  grid-row: 4/6;
+  border: solid black;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.post {
+  grid-column: 3/5;
+  grid-row: 2/3;
+  border: solid black;
+  border-radius: 10px;
+}
+
+.posts {
+  grid-column: 3/5;
+  grid-row: 3/6;
+  border: solid black;
+  border-radius: 10px;
+}
