--- a/react-mern-app/src/pages/Abilities/Abilities.module.css
+++ b/react-mern-app/src/pages/Abilities/Abilities.module.css
@@ -1,4 +1,4 @@
-.pokemon {
+.abilities{
     height: 100vh;
     width: 100vw;
     display: grid;
@@ -6,9 +6,9 @@
     margin-top: 100px;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-rows: 20% 20% 20% 20% 20%;
-}
+  }
 
-.header {
+  .header {
     grid-column: 2/5;
     grid-row: 1/2;
     display: flex;
