--- a/react-mern-app/src/component/Form/PokemonForm.module.css
+++ b/react-mern-app/src/component/Form/PokemonForm.module.css
@@ -1,5 +1,6 @@
 .form {
-    grid-column: 4/5;
+    grid-column: 4/4;
     grid-row:1/2;
-    align-self: flex-end;
+    margin-top: 35px;
+    align-self: flex-start;
 }
