--- a/react-mern-app/src/component/Post/Post.module.css
+++ b/react-mern-app/src/component/Post/Post.module.css
@@ -1,38 +1,31 @@
-.mainContainer  {
-    height: auto;
-    width: auto;
-    display: flex;
-    margin-top: 100px;
-    grid-column: 2/5;
-    grid-row: 1/2;
-    border-radius: 10px;
-    border: solid black;
+.input {
+    margin-top: 50px;
+    margin-left: 150px;
+    grid-column: 3/5;
+    grid-row: 2/3;
 }
 
-.creatPost{
-    width: 1100px;
-
+.body {
+    margin-top: 50px;
+    margin-left: 150px;
+    grid-column: 3/5;
+    grid-row: 3/3;
 }
-
-.bodyContainer{
-    height: auto;
-    width: auto;
-    display: flex;
-    margin-top: 250px;
-    grid-column: 2/5;
-    grid-row: 1/3;
-    justify-content: center;
-    border-radius: 10px;
-    border: solid black;
+.btn{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-
-.button {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.create{
+    width: 500px;
 }
-
-.bodyText{
-    margin-left: 5px;
-    border: solid black;
+.bdyval{
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 50px;
+    width: 500px;
+    height: 30px;
+    text-align: center;
+}
+.createbtn{
+    margin-left: 10px;
 }
