--- a/react-mern-app/src/pages/Abilities/Abilities.module.css
+++ b/react-mern-app/src/pages/Abilities/Abilities.module.css
@@ -12,7 +12,7 @@
     grid-column: 2/5;
     grid-row: 1/2;
     display: flex;
-    align-self: flex-end;
+    align-self: flex-start;
     border-bottom: 1px solid black;
     font-size: 36px;
   }
