--- a/react-mern-app/src/pages/Profile/New.module.css
+++ b/react-mern-app/src/pages/Profile/New.module.css
@@ -1,4 +1,4 @@
-.marketplace {
+.new {
     height: 100vh;
     width: 100vw;
     display: grid;
@@ -6,9 +6,11 @@
     margin-top: 100px;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-column: 3/5;
   }
 
-  .title{
-    margin-left: 300px;
-    grid-column: 2/5;
+  .createbtn{
+    margin-top: 10px;
+    margin-left: 50px;
+    grid-column: 3/5;
   }
